--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div>Combining Technique and Design <br>for a Better User Experience</div>
             <div id="hero-buttons">
                 <a href="#portfolio" target="_self">View Projects<br></a>
-                <a id="link_button-752-117" class="ct-link-button" href="#resume" target="_self">Contact Me<br></a>
+                <a href="#resume" target="_self">Contact Me<br></a>
             </div>
         </div>
     </section>
@@ -46,19 +46,19 @@
         </div>
     </section>
     <section id="services">
-        <div>
+        <div class="container-wrap">
             <h2>What I do</h2>
             <div>I create web designs with a focus on user experience and use my experience with front-end devleopment to do so. This is my wheelhouse:</div>
-            <div>
-                <div>
+            <div class="flex-container">
+                <div class="flex-item">
                     <h3>Web Development</h3>
                     <div>I have experience in creating sites using plain HTML/CSS, utilizing flexbox and other responsive technologies. I also have experience in creating custom marketing emails from HTML/CSS.</div>
                 </div>
-                <div>
+                <div class="flex-item">
                     <h3>Web Content Production</h3>
                     <div>I have extensive experience in content entry using CMS programs such as Tridion and WordPress, along with quality checking and meta data editing to improve SEO results. I also have experience with preparing site content with tools like Adobe Photoshop.</div>
                 </div>
-                <div>
+                <div class="flex-item">
                     <h3>Web Design</h3>
                     <div>From simple mock-ups to launching WordPress sites designed with the user first, I can assist in any step of the process.</div>
                 </div>
@@ -115,14 +115,13 @@
         </div>
     </section>
     <section id="resume">
-        <div>
-            <div>
-                <div>
+            <div class="flex-container">
+                <div class="flex-item">
                     <h1>View My Resume<br></h1>
                     <div>If you are interested in learning more about my qualifications before contacting me, you can view my resume by clicking the button below.<br></div>
                     <a href="" target="_blank">View Resume<br></a>
                 </div>
-                <div>
+                <div class="flex-item">
                     <h1>Contact Me<br></h1>
                     <div>If you are interested in working with me or are looking to hire, feel free to contact me.<br></div>
                     <div>LinkedIn:<br></div>
@@ -131,7 +130,6 @@
                     </a>
                 </div>
             </div>
-        </div>
     </section>
     <section>
         <div>
