flexbox for portfolio projects

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header id="navbar">
         <nav class="navbar-container container">
           <a href="/" class="home-link">
-            <div class="navbar-logo"></div>Website Name
+            <div class="navbar-logo"></div>Tyler Brown Web Development and Design
           </a>
           <button type="button" id="navbar-toggle" aria-controls="navbar-menu" aria-label="Toggle menu" aria-expanded="false">
             <span class="icon-bar"></span>
@@ -28,7 +28,7 @@
             </ul>
           </div>
         </nav>
-      </header>
+    </header>
     <section>
         <div id="hero-banner">
             <h1>Tyler Brown Web Design<br></h1>
@@ -50,15 +50,15 @@
             <h2>What I do</h2>
             <div>I create web designs with a focus on user experience and use my experience with front-end devleopment to do so. This is my wheelhouse:</div>
             <div class="flex-container">
-                <div class="flex-item">
+                <div class="flex-item-3">
                     <h3>Web Development</h3>
                     <div>I have experience in creating sites using plain HTML/CSS, utilizing flexbox and other responsive technologies. I also have experience in creating custom marketing emails from HTML/CSS.</div>
                 </div>
-                <div class="flex-item">
+                <div class="flex-item-3">
                     <h3>Web Content Production</h3>
                     <div>I have extensive experience in content entry using CMS programs such as Tridion and WordPress, along with quality checking and meta data editing to improve SEO results. I also have experience with preparing site content with tools like Adobe Photoshop.</div>
                 </div>
-                <div class="flex-item">
+                <div class="flex-item-3">
                     <h3>Web Design</h3>
                     <div>From simple mock-ups to launching WordPress sites designed with the user first, I can assist in any step of the process.</div>
                 </div>
@@ -68,60 +68,62 @@
     <section id="portfolio">
         <div>
             <h2>My Projects<br></h2>
-            <div>
-                <div>
-                    <a href="" target="_blank">
-                        <div>
+            <div class="container-wrap">
+                <div class="flex-container">
+                    <div class="flex-item-3">
+                        <a href="" target="_blank">
                             <div>
                                 <div>
-                                    <img alt="" src="">
+                                    <div>
+                                        <img alt="" src="http://fpoimg.com/300x250?text=Preview">
+                                    </div>
+                                    <div>
+                                        <h3>A-1 Printing Site Design Overhaul<br></h3>
+                                    </div>          
                                 </div>
-                                <div>
-                                    <h3>A-1 Printing Site Design Overhaul<br></h3>
-                                </div>          
                             </div>
-                        </div>
-                    </a>
-                </div>
-                <div>
-                    <a href="" target="_blank">
-                        <div>
+                        </a>  
+                    </div>
+                    <div class="flex-item-3">
+                        <a href="" target="_blank">
                             <div>
                                 <div>
-                                    <img alt="" src="">
+                                    <div>
+                                        <img alt="" src="http://fpoimg.com/300x250?text=Preview">
+                                    </div>
+                                    <div>
+                                        <h3>Trucking Site Mockup<br></h3>
+                                    </div>          
                                 </div>
-                                <div>
-                                    <h3>Trucking Site Mockup<br></h3>
-                                </div>          
                             </div>
-                        </div>
-                    </a>
-                </div>
-                <div>
-                    <a href="" target="_blank">
-                        <div>
+                        </a>
+                    </div>
+                    <div class="flex-item-3">
+                        <a href="" target="_blank">
                             <div>
                                 <div>
-                                    <img alt="" src="">
+                                    <div>
+                                        <img alt="" src="http://fpoimg.com/300x250?text=Preview">
+                                    </div>
+                                    <div>
+                                        <h3>UX Redesign Project<br></h3>
+                                    </div>          
                                 </div>
-                                <div>
-                                    <h3>UX Redesign Project<br></h3>
-                                </div>          
                             </div>
-                        </div>
-                    </a>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     <section id="resume">
             <div class="flex-container">
-                <div class="flex-item">
+                <div class="flex-item-2">
                     <h1>View My Resume<br></h1>
                     <div>If you are interested in learning more about my qualifications before contacting me, you can view my resume by clicking the button below.<br></div>
                     <a href="" target="_blank">View Resume<br></a>
                 </div>
-                <div class="flex-item">
+                <div class="flex-item-2">
                     <h1>Contact Me<br></h1>
                     <div>If you are interested in working with me or are looking to hire, feel free to contact me.<br></div>
                     <div>LinkedIn:<br></div>
