section styling and background images

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           </div>
         </nav>
     </header>
-    <section>
-        <div id="hero-banner">
+    <section id="hero">
+        <div class="inner-section" id="hero-banner">
             <h1>Tyler Brown Web Design<br></h1>
             <div>Combining Technique and Design <br>for a Better User Experience</div>
             <div id="hero-buttons">
@@ -40,13 +40,13 @@
         </div>
     </section>
     <section id="about">
-        <div>
+        <div class="inner-section">
             <h2>Who I Am</h2>
             <div>My name is Tyler Brown, and I am a web designer from Central Ohio. I have education and work experience in both web/visual design, along with several years of frontend development, content entry, and quality checking experience to launch HTML/CSS and WordPress sites alike. I graduated from The Ohio State University with a BA in Communication Technology and a minor in Design Thinking.</div>
         </div>
     </section>
     <section id="services">
-        <div class="container-wrap">
+        <div class="inner-section container-wrap">
             <h2>What I do</h2>
             <div>I create web designs with a focus on user experience and use my experience with front-end devleopment to do so. This is my wheelhouse:</div>
             <div class="flex-container">
@@ -66,7 +66,7 @@
         </div>
     </section>
     <section id="portfolio">
-        <div>
+        <div class="inner-section">
             <h2>My Projects<br></h2>
             <div class="container-wrap">
                 <div class="flex-container">
@@ -117,7 +117,7 @@
         </div>
     </section>
     <section id="resume">
-            <div class="flex-container">
+            <div class="inner-section flex-container">
                 <div class="flex-item-2">
                     <h1>View My Resume<br></h1>
                     <div>If you are interested in learning more about my qualifications before contacting me, you can view my resume by clicking the button below.<br></div>
