footer and button styling

--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
             <div class="inner-section flex-container">
                 <div class="flex-item-2">
                     <h3>View My Resume<br></h3>
-                    <div>If you are interested in learning more about my qualifications before contacting me, you can view my resume by clicking the button below.<br></div>
-                    <a class="button-cta button-solid-blue" href="" target="_blank">View Resume<br></a>
+                    <div>If you are interested in learning more about my qualifications before contacting me, you can view my resume by clicking the button below.</div>
+                    <div id="resume-button">
+                        <a class="button-cta button-solid-blue" href="" target="_blank">View Resume<br></a>
+                    </div>
                 </div>
                 <div class="flex-item-2">
                     <h3>Contact Me<br></h3>
