project cards, new images

--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css"/>
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/cropped-logo-1-1.png">
+    <title>Tyler Brown Web Development</title>
 </head>
 <body>
     <header id="navbar">
         <nav class="navbar-container container">
           <a href="/" class="home-link">
-            <div class="navbar-logo"></div>
+            <div><img class="navbar-logo" src="images/Brown_Tyler_Logo.png"></div>
           </a>
           <button type="button" id="navbar-toggle" aria-controls="navbar-menu" aria-label="Toggle menu" aria-expanded="false">
             <span class="icon-bar"></span>
@@ -74,26 +78,32 @@
             <h2 id="portfolio-header">My Projects<br></h2>
             <div class="container-wrap">
                 <div id="projects-grid" class="flex-container">
-                    <div class="project-card flex-item-3">
-                        <a href="" target="_blank">
-                            <div>
-                                <h3>A-1 Printing Site Design Overhaul</h3>
-                            </div>
-                        </a>  
+                    <div class="flex-item-3">
+                        <div id="project-card">
+                            <a href="" target="_blank">
+                                <div>
+                                    <h4>A-1 Printing Site Design Overhaul</h4>
+                                </div>
+                            </a>  
+                        </div>
                     </div>
-                    <div class="project-card flex-item-3">
-                        <a href="" target="_blank">
-                            <div>
-                                <h3>Trucking Site Mockup<br></h3>
-                            </div>
-                        </a>
+                    <div class="flex-item-3">
+                        <div id="project-card">
+                            <a href="" target="_blank">
+                                <div>
+                                    <h4>A-1 Printing Site Design Overhaul</h4>
+                                </div>
+                            </a>  
+                        </div>
                     </div>
-                    <div class="project-card flex-item-3">
-                        <a href="" target="_blank">
-                            <div>
-                                <h3>UX Redesign Project<br></h3>
-                            </div>
-                        </a>
+                    <div class="flex-item-3">
+                        <div id="project-card">
+                            <a href="" target="_blank">
+                                <div>
+                                    <h4>A-1 Printing Site Design Overhaul</h4>
+                                </div>
+                            </a>  
+                        </div>
                     </div>
                 </div>
             </div>
