Button, nav styling, images

--- a/index.html
+++ b/index.html
@@ -50,25 +50,25 @@
     <section id="about">
         <div class="inner-section">
             <h2>Who I Am</h2>
-            <div>My name is Tyler Brown, and I am a web designer from Central Ohio. I have education and work experience in both web/visual design, along with several years of frontend development, content entry, and quality checking experience to launch HTML/CSS and WordPress sites alike. I graduated from The Ohio State University with a BA in Communication Technology and a minor in Design Thinking.</div>
+            <p>My name is Tyler Brown, and I am a web designer from Central Ohio. I have education and work experience in both web/visual design, along with several years of frontend development, content entry, and quality checking experience to launch HTML/CSS and WordPress sites alike. I graduated from The Ohio State University with a BA in Communication Technology and a minor in Design Thinking.</p>
         </div>
     </section>
     <section id="services">
         <div class="inner-section container-wrap">
             <h2 id="services-header">What I do</h2>
-            <div id="services-subheader">I create web designs with a focus on user experience and use my experience with front-end devleopment to do so. This is my wheelhouse:</div>
+            <p id="services-subheader">I create web designs with a focus on user experience and use my experience with front-end devleopment to do so. This is my wheelhouse:</p>
             <div id="services-items" class="flex-container">
                 <div class="flex-item-3">
                     <h3>Web Development</h3>
-                    <div>I have experience in creating sites using plain HTML/CSS, utilizing flexbox and other responsive technologies. I also have experience in creating custom marketing emails from HTML/CSS.</div>
+                    <p>I have experience in creating sites using plain HTML/CSS, utilizing flexbox and other responsive technologies. I also have experience in creating custom marketing emails from HTML/CSS.</p>
                 </div>
                 <div class="flex-item-3">
                     <h3>Web Content Production</h3>
-                    <div>I have extensive experience in content entry using CMS programs such as Tridion and WordPress, along with quality checking and meta data editing to improve SEO results. I also have experience with preparing site content with tools like Adobe Photoshop.</div>
+                    <p>I have extensive experience in content entry using CMS programs such as Tridion and WordPress, along with quality checking and meta data editing to improve SEO results. I also have experience with preparing site content with tools like Adobe Photoshop.</p>
                 </div>
                 <div class="flex-item-3">
                     <h3>Web Design</h3>
-                    <div>From simple mock-ups to launching WordPress sites designed with the user first, I can assist in any step of the process.</div>
+                    <p>From simple mock-ups to launching WordPress sites designed with the user first, I can assist in any step of the process.</p>
                 </div>
             </div>
         </div>
@@ -80,29 +80,26 @@
                 <div id="projects-grid" class="flex-container">
                     <div class="flex-item-3">
                         <div id="project-card">
-                            <a href="" target="_blank">
-                                <div>
-                                    <h4>A-1 Printing Site Design Overhaul</h4>
-                                </div>
-                            </a>  
+                            <div class="card-container">
+                                <h5>A-1 Printing Site Design Overhaul</h5>
+                                <p>Lorem Ipsum</p>
+                            </div>  
                         </div>
                     </div>
                     <div class="flex-item-3">
                         <div id="project-card">
-                            <a href="" target="_blank">
-                                <div>
-                                    <h4>A-1 Printing Site Design Overhaul</h4>
-                                </div>
-                            </a>  
+                            <div class="card-container">
+                                <h5>Trucking Site Mockup</h5>
+                                <p>Lorem Ipsum</p>
+                            </div>  
                         </div>
                     </div>
                     <div class="flex-item-3">
                         <div id="project-card">
-                            <a href="" target="_blank">
-                                <div>
-                                    <h4>A-1 Printing Site Design Overhaul</h4>
-                                </div>
-                            </a>  
+                            <div class="card-container">
+                                <h5>UX Redesign Project</h5>
+                                <p>Lorem Ipsum</p>
+                            </div>  
                         </div>
                     </div>
                 </div>
@@ -112,19 +109,22 @@
     <footer id="resume">
             <div class="inner-section flex-container">
                 <div class="flex-item-2">
-                    <h3>View My Resume<br></h3>
-                    <div>If you are interested in learning more about my qualifications before contacting me, you can view my resume by clicking the button below.</div>
+                    <div>
+                        <h3>View My Resume</h3>
+                        <p>If you are interested in learning more about my qualifications before contacting me, you can view my resume by clicking the button below.</p>
+                    </div>
                     <div id="resume-button">
-                        <a class="button-cta button-solid-blue" href="" target="_blank">View Resume<br></a>
+                        <a class="button-cta button-solid-blue" href="" target="_blank">View Resume</a>
                     </div>
                 </div>
                 <div class="flex-item-2">
-                    <h3>Contact Me<br></h3>
-                    <div>If you are interested in working with me or are looking to hire, feel free to contact me.<br></div>
-                    <div>LinkedIn:<br></div>
-                    <a href="http://linkedin.com/in/tylerhbrown0457/" target="_blank">
-                        <div>linkedin.com/in/tylerhbrown0457/<br></div>
-                    </a>
+                    <div>
+                        <h3>Contact Me<br></h3>
+                        <p>If you are interested in working with me or are looking to hire, feel free to contact me.</p></div>
+                    <div id="linkedin-link">
+                        <p>LinkedIn:</p>
+                        <a href="http://linkedin.com/in/tylerhbrown0457/" target="_blank">linkedin.com/in/tylerhbrown0457/</a>
+                    </div>
                 </div>
             </div>
         </footer>
