additional styling, content cards

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <li class="navbar-item"><a class="navbar-link" href="#about">About</a></li>
               <li class="navbar-item"><a class="navbar-link" href="#services">Services</a></li>
               <li class="navbar-item"><a class="navbar-link" href="#portfolio">Portfolio</a></li>
-              <li class="navbar-item"><a class="navbar-link" href="#resume">Resume</a></li>
+              <li class="navbar-item"><a class="navbar-link" target="_blank" href="documents/TylerBrown_Resume.pdf">Resume</a></li>
               <li class="navbar-item"><a class="navbar-link" href="#contact">Contact</a></li>
             </ul>
           </div>
@@ -80,33 +80,39 @@
                 <div id="projects-grid" class="flex-container">
                     <div class="flex-item-3">
                         <div id="project-card">
-                            <div class="card-container">
-                                <h5>A-1 Printing Site Design Overhaul</h5>
-                                <p>Lorem Ipsum</p>
-                            </div>  
+                            <a target="_blank" href="https://www.a-1printinginc.com/">
+                                <div class="card-container">
+                                    <h5>A-1 Printing Site Design Overhaul</h5>
+                                    <p>A WordPress site in which I assisted in redesigning content layout. styling, etc.</p>
+                                </div>  
+                            </a>
                         </div>
                     </div>
                     <div class="flex-item-3">
                         <div id="project-card">
-                            <div class="card-container">
-                                <h5>Trucking Site Mockup</h5>
-                                <p>Lorem Ipsum</p>
-                            </div>  
+                            <a target="_blank" href="documents/Trucking-Site-Mockup_compressed.pdf"></a>
+                                <div class="card-container">
+                                    <h5>Trucking Site Mockup</h5>
+                                    <p>Mockup design of a WordPress site for a generic trucking company</p>
+                                </div>  
+                            </a>
                         </div>
                     </div>
                     <div class="flex-item-3">
                         <div id="project-card">
-                            <div class="card-container">
-                                <h5>UX Redesign Project</h5>
-                                <p>Lorem Ipsum</p>
-                            </div>  
+                            <a target="_blank" href="documents/Project-Booklet.pdf"></a>
+                                <div class="card-container">
+                                    <h5>UX Redesign Project</h5>
+                                    <p>A design project for a doctor's office website involving visual design, user experience, and more</p>
+                                </div>  
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <footer id="resume">
+    <footer id="contact">
             <div class="inner-section flex-container">
                 <div class="flex-item-2">
                     <div>
@@ -114,7 +120,7 @@
                         <p>If you are interested in learning more about my qualifications before contacting me, you can view my resume by clicking the button below.</p>
                     </div>
                     <div id="resume-button">
-                        <a class="button-cta button-solid-blue" href="" target="_blank">View Resume</a>
+                        <a class="button-cta button-solid-blue" href="documents/TylerBrown_Resume.pdf" target="_blank">View Resume</a>
                     </div>
                 </div>
                 <div class="flex-item-2">
