--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </div>
                     <div class="flex-item-3">
                         <div id="project-card">
-                            <a target="_blank" href="documents/Trucking-Site-Mockup_compressed.pdf"></a>
+                            <a target="_blank" href="documents/Trucking-Site-Mockup_compressed.pdf">
                                 <div class="card-container">
                                     <h5>Trucking Site Mockup</h5>
                                     <p>Mockup design of a WordPress site for a generic trucking company</p>
@@ -100,7 +100,7 @@
                     </div>
                     <div class="flex-item-3">
                         <div id="project-card">
-                            <a target="_blank" href="documents/Project-Booklet.pdf"></a>
+                            <a target="_blank" href="documents/Project-Booklet.pdf">
                                 <div class="card-container">
                                     <h5>UX Redesign Project</h5>
                                     <p>A design project for a doctor's office website involving visual design, user experience, and more</p>
