Reworked button styling

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <div id="hero-subheader">Combining Technique and Design <br>for a Better User Experience</div>
             <div class="flex-button-container" id="hero-buttons">
                 <div class="flex-button-2">
-                    <a class="button-cta button-solid-blue" href="#portfolio" target="_self">View Projects<br></a>
+                    <a class="button-cta button-solid-lightblue" href="#portfolio" target="_self">View Projects<br></a>
                 </div>
                 <div class="flex-button-2">
-                    <a class="button-cta button-hollow-blue" href="#resume" target="_self">Contact Me<br></a>
+                    <a class="button-cta button-solid-lightblue" href="#resume" target="_self">Contact Me<br></a>
                 </div>
             </div>
         </div>
@@ -120,7 +120,7 @@
                         <p>If you are interested in learning more about my qualifications before contacting me, you can view my resume by clicking the button below.</p>
                     </div>
                     <div id="resume-button">
-                        <a class="button-cta button-solid-blue" href="documents/TylerBrown_Resume.pdf" target="_blank">View Resume</a>
+                        <a class="button-cta button-solid-lightblue" href="documents/TylerBrown_Resume.pdf" target="_blank">View Resume</a>
                     </div>
                 </div>
                 <div class="flex-item-2">
