Fixed nav image url

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header id="navbar">
         <nav class="navbar-container container">
-          <a href="/" class="home-link">
+          <a href="/portfolio/" class="home-link">
             <div><img class="navbar-logo" src="images/Brown_Tyler_Logo.png"></div>
           </a>
           <button type="button" id="navbar-toggle" aria-controls="navbar-menu" aria-label="Toggle menu" aria-expanded="false">
