Fixed content card width

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <div id="hero-subheader">Combining Technique and Design <br>for a Better User Experience</div>
             <div class="flex-button-container" id="hero-buttons">
                 <div class="flex-button-2">
-                    <a class="button-cta button-solid-lightblue" href="#portfolio" target="_self">View Projects<br></a>
+                    <a class="button-cta button-solid-lightblue" href="#portfolio" target="_self">Projects<br></a>
                 </div>
                 <div class="flex-button-2">
-                    <a class="button-cta button-solid-lightblue" href="#resume" target="_self">Contact Me<br></a>
+                    <a class="button-cta button-solid-lightblue" href="#resume" target="_self">Contact<br></a>
                 </div>
             </div>
         </div>
